[metadata]
name = manorajesh
version = 0.0.1
author = Mano Rajesh
author_email = thorax.swamps.0a@icloud.com
description = A simple pong game in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manorajesh/mpong
project_urls =
    Bug Tracker = https://github.com/manorajesh/mpong/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src